style change for fixing layout problem of exposed filters in safari

--- a/sites/all/themes/ex5/css/ex5.css
+++ b/sites/all/themes/ex5/css/ex5.css
@@ -641,7 +641,7 @@ article .comment > footer{
 }
 
 .group-filters .views-exposed-form .views-exposed-widget{
-	margin-right: 30px;
+	margin-right: 23px;
 }
 
 .group-filters .views-exposed-form .views-exposed-widget > label{
